# Data_Processing

./: README.md  pyproject.toml
Labo1/: Untitled.ipynb  pyproject.toml
Labo1/.ipynb_checkpoints/: HelloWorld-checkpoint.py  Untitled-checkpoint.ipynb
LaboTabular1/Data_Tabular_1/: ex2.1.ipynb  ex2.2.ipynb  ex2.3.ipynb  ex2.4.ipynb  iris_cleaned.csv  iris_to_clean.csv  old_ex2.4.ipynb
LaboTabular1/correction_Tabular_1/: ex2_1.ipynb  ex2_2.ipynb  ex2_3.ipynb
LaboTabular2/Data_Tabular_2/: ex3.1.ipynb  ex3.2.ipynb  ex3.3.ipynb  ex3.4.ipynb  ex3.5.ipynb
LaboTabular2/correction_tabular2/: ex3_1.ipynb  ex3_2.ipynb  ex3_3.ipynb  ex3_4.ipynb  ex3_5.ipynb
LaboTabular3/: bands.csv
LaboTabular3/corr_section4/: ex4_1.ipynb  ex4_2.ipynb  ex4_3.ipynb
LaboTabular3/exemple_miniproject/: ex4_miniproject.ipynb
LaboTabular3/exos/: Ex4.1_2.ipynb  Ex4_mini_projet.ipynb  cinemas.geojson  medals_long.csv
TextProcessing/: NLP.ipynb  project.ipynb
TextProcessing/res/: my_website_filtered.txt  my_website_full.txt  website-full.txt  website-withoutPictureText.txt  website_filtered.txt
