[project]
name = "data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.0.0",
    "janome>=0.5.0",
    "matplotlib>=3.10.8",
    "matplotlib-venn>=1.1.2",
    "networkx>=3.6.1",
    "nltk>=3.9.4",
    "notebook>=7.5.3",
    "panda>=0.3.1",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "statsmodels>=0.14.6",
    "wordcloud>=1.9.6",
]
